--- a/style.css
+++ b/style.css
@@ -511,4 +511,19 @@ color: #ebebff;
     align-items: center;
     margin-top: 30px;
     padding: 10px 20px;
+    width: 90%;
+    background-color: #6070ff;
   }
+
+  form input, form textarea {
+         margin: 10px;
+         padding: 10px;
+         outline: none;
+         width: 70%;
+  }
+
+  form textarea {
+    height: 80%;
+    
+  }
+
