--- a/style.css
+++ b/style.css
@@ -478,12 +478,12 @@
   
 
  .form-section {
-    position: abosulte;
     background: #6070FF;
     border-top-left-radius: 50px;
     margin-top: 60px;
     font-family: 'Poppins' sans-serif;
     font-style: normal;
+    width: 100%
   }
 
   .form-div  h3 {
@@ -514,16 +514,13 @@ color: #ebebff;
     width: 90%;
     background-color: #6070ff;
   }
-
-  form input, form textarea {
-         margin: 10px;
-         padding: 10px;
-         outline: none;
-         width: 70%;
-  }
-
-  form textarea {
-    height: 80%;
-    
-  }
-
+input [type=name],
+input [type=email] {
+  width: 327px;
+  height: 48px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
