--- a/style.css
+++ b/style.css
@@ -483,7 +483,8 @@
     margin-top: 60px;
     font-family: 'Poppins' sans-serif;
     font-style: normal;
-    width: 100%
+    width: 100%;
+    height: 100vh;
   }
 
   .form-div  h3 {
@@ -523,4 +524,38 @@ input [type=email] {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+}
+.btn-1:hover {
+  background-color: #6070ff;
+  color: #fff;
+}
+
+.btn-1:active {
+  background-color: #2230d2;
+  color: #fff;
+}
+
+.btn-1:disabled {
+  background-color: #ebebff;
+  color: #7a869a;
+}
+.btn-1 {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 150px;
+  height: 45px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #396df2;
+  margin-left: 10px;
 }
